Dont need register command in plugin.yml anymore

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,11 +2,11 @@ name: HiPlugin
 version: 3.2
 main: top.whitecola.HiPlugin
 author: [White_cola,Chloe030120]
-commands:
-  hip:
-    usage: /hip <command> [args] ...
-permissions:
-  hiplugin.sayhi:
-    default: op
-  hiplugin.example:
-    default: op
+#commands:
+#  hip:
+#    usage: /hip <commands> [args] ...
+#permissions:
+#  hiplugin.sayhi:
+#    default: op
+#  hiplugin.example:
+#    default: op
